Chang max-width in div and add display fix margin and add vertical-align

--- a/css/main.css
+++ b/css/main.css
@@ -61,15 +61,16 @@ img {
   width: 100%;
   max-width: 100%;
   margin-right: 1rem;
-  margin-top: 1rem;
-  height: auto;
+  margin-top: 2rem;
   display: block;
 }
 
 div {
-  max-width: 20rem;
+  max-width: 25rem;
+  display: inline-block;
   padding: 0;
-  margin: 0;
+  margin: 0 .5em;
+  vertical-align: middle;
 }
 
 nav a {
